--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.3",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
     "@mui/styled-engine": "^5.15.3",
     "@mui/system": "^5.15.3",
     "@mui/x-date-pickers": "^6.18.7",
