--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/styled-engine": "^5.15.3",
-    "@mui/system": "^5.15.3",
+    "@mui/system": "^5.15.5",
     "@mui/x-date-pickers": "^6.18.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +16,7 @@
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "firebase": "^10.7.1",
+    "mui-file-input": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
