--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/icons": "^4.11.3",
     "@material/textfield": "^14.0.0",
-    "@mui/icons-material": "^5.15.4",
-    "@mui/material": "^5.15.4",
+    "@mui/icons-material": "^5.15.8",
+    "@mui/material": "^5.15.7",
     "@mui/styled-engine": "^5.15.3",
     "@mui/system": "^5.15.5",
-    "@mui/x-date-pickers": "^6.18.7",
+    "@mui/x-data-grid": "^6.19.3",
+    "@mui/x-date-pickers": "^6.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
