--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scoutsevents-ui",
   "version": "0.0.18",
   "private": true,
+  "proxy": "http://ec2-52-208-111-3.eu-west-1.compute.amazonaws.com/",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -20,7 +21,7 @@
     "dayjs": "^1.11.10",
     "firebase": "^10.7.1",
     "mui-file-input": "^4.0.3",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
